<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TabLayout
        android:id="@+id/result_tab_layout_selection"
        app:tabIndicatorColor="@color/white"
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="50dp">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:text="@string/result_song"
            android:layout_height="match_parent" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:text="@string/result_album"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:text="@string/result_artist"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:background="@color/white"
        android:id="@+id/result_vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>


</LinearLayout>