<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TabLayout
        android:id="@+id/selection_tabLyt_selected"
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="40dp"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="2dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selection_recommend" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:text="@string/selection_radio"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:text="@string/selection_rank"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/selection_vp_fragment_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</LinearLayout>