<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/photo_llyt_top"
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/photo_iv_background"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/photo_tv_standard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:background="@drawable/photo_text_bg"
            android:gravity="center"
            android:text="@string/text_standard"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/photo_tv_mv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:background="@drawable/photo_text_bg"
            android:gravity="center"
            android:text="@string/text_MV"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/photo_tv_effect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/photo_text_bg"
            android:gravity="center"
            android:text="@string/text_effect"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/photo_iv_background"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="35dp"
        android:src="@color/black" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_iv_photo"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="45dp"
        android:src="@drawable/music_default" />


</RelativeLayout>