<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".home.HomeActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/home_drawer_layout_skid_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/home_tb_title"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/red">

                <android.support.design.widget.TabLayout
                    app:tabIndicatorColor="@color/red"
                    android:id="@+id/home_tab_layout_selection"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <android.support.design.widget.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/titlebar_music_white" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/titlebar_discover_grey" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/titlebar_read_grey" />
                </android.support.design.widget.TabLayout>

                <ImageButton
                    android:id="@+id/home_ib_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/red"
                    android:scaleType="center"
                    android:src="@drawable/titlebar_search"
                    tools:ignore="ContentDescription" />

            </android.support.v7.widget.Toolbar>

            <android.support.v4.view.ViewPager
                android:id="@+id/home_vp_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/home_fragment_bottom"
                android:layout_below="@+id/home_tb_title"
                android:background="@color/black" />

            <fragment
                android:id="@+id/home_fragment_bottom"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:name="com.hebaiyi.www.topviewmusic.music.view.BottomFragment"
                android:layout_alignParentBottom="true"
                android:background="@color/white"/>

        </RelativeLayout>

        <!--侧滑菜单界面-->
        <ScrollView
            android:id="@+id/main_nav_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/home_drawer_background"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/home_nav_civ_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/c1over_icon"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/home_nav_tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="490208164@qq.com"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/home_nav_tv_email"
                    android:layout_marginLeft="20dp"
                    android:text="Cc1over"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,RtlHardcoded" />

            </RelativeLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_msg_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_msg"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_vip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_vip_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_vip"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_shop_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_shop"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_game_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_game"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_free_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_free"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_local_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_local"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/click_bg"
                android:id="@+id/home_llyt_know"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry,UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/drawer_know_icon"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="start|center"
                    android:paddingStart="15dp"
                    android:text="@string/home_know"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

     </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>